Making a button with incrementing clicks

--- a/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
@@ -1,7 +1,20 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
+<head>
+    <style>
+        div {
+            margin-top: 275px;
+            text-align: center
+        }
+    </style>
+</head>
 <div class="text-center">
-    <h1>Hello, User</h1>
+
+    @using (Html.BeginForm("ButtonClick", "Home"))
+    {
+        <p>Number of clicks: @ViewData["clicks"]</p>
+        <button type="submit" name="clickMeButton">Click me</button>
+    }
+
 </div>
