--- a/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model iTechArt.SurveysSite.DomainModel.ButtonClicksCounter
+@{
     ViewData["Title"] = "Home Page";
 }
 <head>
@@ -13,7 +14,7 @@
 
     @using (Html.BeginForm("ButtonClick", "Home"))
     {
-        <p>Number of clicks: @ViewData["clicks"]</p>
+        <p>Number of clicks: @Model.Clicks</p>
         <button type="submit" name="clickMeButton">Click me</button>
     }
 
