Tried to modify logger and unit of work

--- a/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model iTechArt.SurveysSite.DomainModel.ButtonClicksCounter
+﻿@model iTechArt.SurveysSite.Repositories.ButtonClicksCounter
 @{
     ViewData["Title"] = "Home Page";
 }
