Fixes on logger, unit of work and repositories done

--- a/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model iTechArt.SurveysSite.Repositories.ButtonClicksCounter
+﻿@model iTechArt.SurveysSite.DomainModel.ButtonClicksCounter
 @{
     ViewData["Title"] = "Home Page";
 }
