--- a/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
@@ -1,20 +1,8 @@
-﻿@model iTechArt.SurveysSite.DomainModel.ButtonClicksCounter
-@{
+﻿@{
     ViewData["Title"] = "Home Page";
 }
-<head>
-    <style>
-        div {
-            margin-top: 275px;
-            text-align: center
-        }
-    </style>
-</head>
-<div class="text-center">
-    <form method="post">
-        <p>Number of clicks: @Model.Clicks</p>
-        <input type="submit" value="Click me" asp-action="ButtonClick"/>
-    </form>
-    
-
+<div>
+    <button type="submit" name="CreateUser" onclick="location.href='@Url.Action("Index", "Create")'">Create new user</button>
+    <button type="submit" style="margin-left: 100px" onclick="location.href='@Url.Action("DisplayAllUsers")'">Display all users</button>
 </div>
+
