--- a/src/iTechArt.SurveysSite.WebApp/Views/Shared/_Layout.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Shared/_Layout.cshtml
@@ -1,6 +1,9 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+<header style="margin-bottom: 50px">
+    <a href="../Home/Index">Home</a>
+</header>
 @{
     @RenderBody()
 }
