--- a/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 <div>
-    <button type="submit" name="CreateUser" onclick="location.href='@Url.Action("Index", "Create")'">Create new user</button>
-    <button type="submit" style="margin-left: 100px" onclick="location.href='@Url.Action("DisplayAllUsers")'">Display all users</button>
+    <button type="submit" name="CreateUser" onclick="location.href = '@Url.Action("CreateUser", "UserAction")'">Create new user</button>
+    <button type="submit" style="margin-left: 100px" onclick="location.href='@Url.Action("DisplayAllUsers", "UserAction")'">Display all users</button>
 </div>
 
