--- a/src/iTechArt.SurveysSite.WebApp/Views/_ViewImports.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/_ViewImports.cshtml
@@ -1,2 +1,1 @@
-﻿@using iTechArt.SurveysSite.WebApp
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
