--- a/src/iTechArt.SurveysSite.WebApp/Views/Shared/_Layout.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<header style="margin-bottom: 50px">
-    <a href="../Home/Index">Home</a>
+    <a asp-controller="Home" asp-action="Index">Home</a>
 </header>
 @{
     @RenderBody()
