Created ViewModel and seed data into the database

--- a/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model iTechArt.SurveysSite.DomainModel.ButtonClicksCounter
+﻿@model iTechArt.SurveysSite.WebApp.ViewModel.ButtonClicksCounterViewModel
 @{
     ViewData["Title"] = "Home Page";
 }
