Changed migration name and added user view model

--- a/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
@@ -2,6 +2,6 @@
     ViewData["Title"] = "Home Page";
 }
 <div>
-    <button type="submit" name="CreateUser" onclick="location.href = '@Url.Action("CreateUser", "UserAction")'">Create new user</button>
-    <button type="submit" style="margin-left: 100px" onclick="location.href='@Url.Action("DisplayAllUsers", "UserAction")'">Display all users</button>
+    <button type="submit" name="CreateUser" onclick="location.href = '@Url.Action("CreateUser", "UserManagement")'">Create new user</button>
+    <button type="submit" style="margin-left: 100px" onclick="location.href='@Url.Action("DisplayAllUsers", "UserManagement")'">Display all users</button>
 </div>
