--- a/src/iTechArt.SurveysSite.WebApp/Views/UserManagement/DisplayAllUsers.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/UserManagement/DisplayAllUsers.cshtml
@@ -1,17 +1,17 @@
-﻿@model IReadOnlyCollection<iTechArt.SurveysSite.DomainModel.User>
+﻿@model iTechArt.SurveysSite.WebApp.ViewModel.UserViewModel
 @{
     ViewData["Title"] = "DisplayAll";
 }
 
 <div>
-    @if (Model.Count == 0)
+    @if (Model.Users.Count == 0)
     {
         <h1>No users yet</h1>
     }
     else
     {
         <ul>
-            @foreach (var user in Model)
+            @foreach (var user in Model.Users)
             {
                 <li>User id: @user.Id, Username: @user.FullName</li>
             }
