--- a/src/iTechArt.SurveysSite.WebApp/Views/UserManagement/DisplayAllUsers.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/UserManagement/DisplayAllUsers.cshtml
@@ -1,4 +1,4 @@
-﻿@model iTechArt.SurveysSite.WebApp.ViewModel.UserViewModel
+﻿@model iTechArt.SurveysSite.WebApp.ViewModels.UsersViewModel
 @{
     ViewData["Title"] = "DisplayAll";
 }
