Added main page and layout

--- a/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
@@ -1,7 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<div>
-    <button type="submit" name="CreateUser" onclick="location.href = '@Url.Action("CreateUser", "UserManagement")'">Create new user</button>
-    <button type="submit" style="margin-left: 100px" onclick="location.href='@Url.Action("DisplayAllUsers", "UserManagement")'">Display all users</button>
+<head>
+    <title>Main page</title>
+    <link rel="stylesheet" href="css/MainPageStyles.css"/>
+</head>
+<div class="companyName">
+    <h1>iTechArt</h1>
 </div>
