--- a/src/iTechArt.SurveysSite.WebApp/Views/Shared/_Layout.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Shared/_Layout.cshtml
@@ -1,5 +1,9 @@
-﻿<header style="margin-bottom: 50px">
-    <a asp-controller="Home" asp-action="Index">Home</a>
+﻿<head>
+    <title>Main page</title>
+    <link rel="stylesheet" href="css/LayoutStyles.css"/>
+</head>
+<header>
+    <a asp-controller="Home" asp-action="Index">Sign in</a>
 </header>
 @{
     @RenderBody()
