Added custom user store

--- a/src/iTechArt.SurveysSite.WebApp/Views/Shared/_Layout.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Shared/_Layout.cshtml
@@ -1,9 +1,8 @@
 ﻿<head>
-    <title>Main page</title>
     <link rel="stylesheet" href="css/LayoutStyles.css"/>
 </head>
 <header>
-    <a asp-controller="Home" asp-action="Index">Sign in</a>
+    <a asp-controller="Home" asp-action="Index">Sing in</a>
 </header>
 @{
     @RenderBody()
