Adding business logic using user entity (#6)
Adding business logic using user entity

--- a/src/iTechArt.SurveysSite.WebApp/Views/Shared/_Layout.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Shared/_Layout.cshtml
@@ -1,3 +1,6 @@
-﻿@{
+﻿<header style="margin-bottom: 50px">
+    <a asp-controller="Home" asp-action="Index">Home</a>
+</header>
+@{
     @RenderBody()
 }
