--- a/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
@@ -1,20 +1,7 @@
-﻿@model iTechArt.SurveysSite.WebApp.ViewModel.ButtonClicksCounterViewModel
-@{
+﻿@{
     ViewData["Title"] = "Home Page";
 }
-<head>
-    <title>Button clicks page</title>
-
-    <style>
-        div {
-            margin-top: 275px;
-            text-align: center
-        }
-    </style>
-</head>
 <div>
-    <form method="post">
-        <p>Number of clicks: @Model.Clicks</p>
-        <input type="submit" value="Click me" asp-action="ButtonClick"/>
-    </form>
+    <button type="submit" name="CreateUser" onclick="location.href = '@Url.Action("CreateUser", "UserManagement")'">Create new user</button>
+    <button type="submit" style="margin-left: 100px" onclick="location.href='@Url.Action("DisplayAllUsers", "UserManagement")'">Display all users</button>
 </div>
