--- a/src/iTechArt.SurveysSite.WebApp/Views/SignIn/Login.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/SignIn/Login.cshtml
@@ -1,26 +1,30 @@
 ﻿@model iTechArt.SurveysSite.WebApp.ViewModels.UserViewModel
 <head>
-    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <link href="~/css/Login.css" rel="stylesheet" />
-    <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-    <script src="lib/jquery/jquery.min.js"></script>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link href="/css/Login.css" rel="stylesheet"/>
 </head>
-<div class="wrapper fadeInDown">
-    <div id="formContent">
-
-        <form asp-controller="SignIn" asp-action="Login">
-            <div asp-validation-summary="ModelOnly"></div>
-            @Html.TextBoxFor(model => model.UserName, htmlAttributes: new {@class = "fadeIn second", id = "login", name = "login", type = "text", autocomplete = "off", placeholder = "login"})
-            @Html.TextBoxFor(model => model.Password, htmlAttributes: new {@class = "fadeIn third", id = "password", name = "login", type = "password", autocomplete = "off", placeholder = "password"})
-            <input type="submit" class="fadeIn fourth" value="Sign in">
-        </form>
-        @if (!string.IsNullOrEmpty(ViewBag.Message))
-        {
-            <script type="text/javascript">
-                window.onload = function() {
-                    alert("@ViewBag.Message");
-                }
-            </script>
-        }
-    </div>
+<div class="simple-login-container">
+    <h2>Login</h2>
+    <form method="post" asp-controller="SignIn" asp-action="Login">
+        <div class="row">
+            <div class="col-md-12 form-group">
+                @Html.TextBoxFor(model => model.UserName, new {type="text", @class="form-control", placeholder="Login", autocomplete="off"})
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 form-group">
+                @Html.TextBoxFor(model => model.Password, new {type="password", @class="form-control", placeholder="Enter your password", autocomplete="off"})
+            </div>
+        </div>
+        <div class="row">
+            @Html.ValidationSummary(false)
+        </div>
+        <div class="row">
+            <div class="col-md-12 form-group">
+                <input type="submit" class="btn btn-block btn-login">
+            </div>
+        </div>
+    </form>
 </div>
