--- a/src/iTechArt.SurveysSite.WebApp/wwwroot/css/Login.css
+++ b/src/iTechArt.SurveysSite.WebApp/wwwroot/css/Login.css
@@ -1,4 +1,4 @@
-﻿html {
+﻿/*html {
     background-color: #56baed;
 }
 
@@ -22,13 +22,13 @@ h2 {
     display: inline-block;
     margin: 40px 8px 10px 8px;
     color: #cccccc;
-}
+}*/
 
 
 
 /* STRUCTURE */
 
-.wrapper {
+/*.wrapper {
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -59,26 +59,26 @@ h2 {
     text-align: center;
     -webkit-border-radius: 0 0 10px 10px;
     border-radius: 0 0 10px 10px;
-}
+}*/
 
 
 
 /* TABS */
 
-h2.inactive {
+/*h2.inactive {
     color: #cccccc;
 }
 
 h2.active {
     color: #0d0d0d;
     border-bottom: 2px solid #5fbae9;
-}
+}*/
 
 
 
 /* FORM TYPOGRAPHY*/
 
-input[type=button], input[type=submit], input[type=reset] {
+/*input[type=button], input[type=submit], input[type=reset] {
     background-color: #56baed;
     border: none;
     color: white;
@@ -140,12 +140,12 @@ input[type=text] {
 
     input[type=text]::placeholder {
         color: #cccccc;
-    }
+    }*/
 
 /* ANIMATIONS */
 
 /* Simple CSS3 Fade-in-down Animation */
-.fadeInDown {
+/*.fadeInDown {
     -webkit-animation-name: fadeInDown;
     animation-name: fadeInDown;
     -webkit-animation-duration: 1s;
@@ -180,10 +180,10 @@ input[type=text] {
         -webkit-transform: none;
         transform: none;
     }
-}
+}*/
 
 /* Simple CSS3 Fade-in Animation */
-@-webkit-keyframes fadeIn {
+/*@-webkit-keyframes fadeIn {
     from {
         opacity: 0;
     }
@@ -248,10 +248,10 @@ input[type=text] {
         -webkit-animation-delay: 1s;
         -moz-animation-delay: 1s;
         animation-delay: 1s;
-    }
+    }*/
 
 /* Simple CSS3 Fade-in Animation */
-.underlineHover:after {
+/*.underlineHover:after {
     display: block;
     left: 0;
     bottom: -10px;
@@ -268,16 +268,43 @@ input[type=text] {
 
     .underlineHover:hover:after {
         width: 100%;
-    }
+    }*/
 
 
 
 /* OTHERS */
 
-*:focus {
+/**:focus {
     outline: none;
 }
 
 #icon {
     width: 60%;
+}*/
+
+
+body {
+    background-color: #5286F3;
+    font-size: 14px;
+    color: #fff;
+}
+
+.simple-login-container {
+    width: 300px;
+    max-width: 100%;
+    margin: 50px auto;
+}
+
+.simple-login-container h2 {
+    text-align: center;
+    font-size: 20px;
+}
+
+.simple-login-container .btn-login {
+    background-color: #FF5964;
+    color: #fff;
+}
+
+a {
+    color: #fff;
 }
