--- a/src/iTechArt.SurveysSite.WebApp/Views/SignIn/Login.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/SignIn/Login.cshtml
@@ -23,7 +23,7 @@
         </div>
         <div class="row">
             <div class="col-md-12 form-group">
-                <input type="submit" class="btn btn-block btn-login">
+                <input type="submit" class="btn btn-block btn-login" value="Sign in">
             </div>
         </div>
     </form>
