Added role class, role store, register page and register model

--- a/src/iTechArt.SurveysSite.WebApp/Views/SignIn/Login.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/SignIn/Login.cshtml
@@ -19,6 +19,9 @@
             </div>
         </div>
         <div class="row">
+            <a class="btn btn-primary btn-sm active" role="button" aria-pressed="true" asp-controller="Register" asp-action="Register">Register</a>
+        </div>
+        <div class="row">
             @Html.ValidationSummary(false)
         </div>
         <div class="row">
