--- a/src/iTechArt.SurveysSite.WebApp/Views/Shared/_LoginPartial.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Shared/_LoginPartial.cshtml
@@ -20,5 +20,8 @@
         <li class="nav-item">
             <a class="nav-link text-dark" asp-controller="SignIn" asp-action="Login">Login</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-controller="Register" asp-action="Register">Register</a>
+        </li>
     }
 </ul>
