Added one line before if construction and changed view

--- a/src/iTechArt.SurveysSite.WebApp/wwwroot/css/LayoutStyles.css
+++ b/src/iTechArt.SurveysSite.WebApp/wwwroot/css/LayoutStyles.css
@@ -8,6 +8,10 @@ a {
     color: #0366d6;
 }
 
+a.nav-link  {
+    padding-top: 9px;
+}
+
 .btn-primary {
     color: #fff;
     background-color: #1b6ec2;
