--- a/src/iTechArt.SurveysSite.WebApp/Views/Shared/_LoginPartial.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Shared/_LoginPartial.cshtml
@@ -1,13 +1,12 @@
 ﻿@using iTechArt.SurveysSite.DomainModel
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<User> _signInManager
-@inject UserManager<User> _userManager
 
 <ul class="navbar-nav">
     @if (_signInManager.IsSignedIn(User))
     {
         <li class="nav-item">
-            <p class="nav-link text-dark" asp-controller="Home" asp-action="Index" title="Manage">Hello @User.Identity.Name!</p>
+            <a class="nav-link text-dark">Hello @User.Identity.Name!</a>
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-controller="Home" asp-action="Index">
