--- a/src/iTechArt.SurveysSite.WebApp/Views/Register/Register.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Register/Register.cshtml
@@ -33,7 +33,7 @@
         </div>
         <div class="row">
             <div class="col-md-12 form-group">
-                <input type="submit" class="btn btn-block btn-login" value="Sign in">
+                <input type="submit" class="btn btn-block btn-login" value="Sign up">
             </div>
         </div>
     </form>
