--- a/src/iTechArt.SurveysSite.WebApp/Views/SignIn/Login.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/SignIn/Login.cshtml
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="row">
-            <a class="btn btn-primary btn-sm active" role="button" aria-pressed="true" asp-controller="Register" asp-action="Register">Register</a>
+            <a class="btn btn-primary btn-sm active" role="button" id="registerButton" aria-pressed="true" asp-controller="Register" asp-action="Register">Register</a>
         </div>
         <div class="row">
             @Html.ValidationSummary(false)
