--- a/src/iTechArt.SurveysSite.WebApp/wwwroot/css/Login.css
+++ b/src/iTechArt.SurveysSite.WebApp/wwwroot/css/Login.css
@@ -4,6 +4,19 @@
     color: #fff;
 }
 
+#showPass {
+    margin-left: -6px;
+}
+
+#labelPass {
+    padding: 2px 7px 2px 17px;
+}
+
+#registerButton {
+    width: 100px;
+    margin-left: 14px;
+}
+
 .simple-login-container {
     width: 300px;
     max-width: 100%;
