--- a/src/iTechArt.SurveysSite.WebApp/Views/Register/Register.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Register/Register.cshtml
@@ -39,11 +39,11 @@
         <div class="row">
             @Html.ValidationSummary(false)
         </div>
-        <div class="row">
-            <div class="col-md-12 form-group">
-                <input type="submit" class="btn btn-block btn-login" value="Sign up">
-            </div>
+    <div class="row">
+        <div class="col-md-12 form-group">
+            <input type="submit" class="btn btn-block btn-login" value="Sign up">
         </div>
+    </div>
         <script>
             $(function() {
 
@@ -57,5 +57,18 @@
                 });
             });
         </script>
+    @if (!string.IsNullOrEmpty(ViewBag.Message))
+    {
+        <script>
+            window.onload = function() {
+                alert("@ViewBag.Message");
+            };
+            window.setTimeout(function() {
+                    window.location.href = "/SignIn/Login";
+                },
+                2000);
+            
+        </script>
+    }
     </form>
 </div>
