--- a/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@using iTechArt.SurveysSite.DomainModel
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<User> _signInManager
+@{
     ViewData["Title"] = "Home Page";
 }
 <head>
@@ -6,7 +9,23 @@
     <link rel="stylesheet" href="/css/MainPageStyles.css"/>
 </head>
 <body>
-    <div>
-        <img src="/images/iTechArt_logo.png" class="logo"/>
-    </div>
+<div>
+    @if (_signInManager.IsSignedIn(User))
+    {
+        <div>
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">New survey</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">My surveys</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Surveys templates</a>
+                </li>
+            </ul>
+        </div>
+    }
+    <img src="/images/iTechArt_logo.png" class="logo"/>
+</div>
 </body>
