--- a/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
@@ -9,19 +9,19 @@
     <link rel="stylesheet" href="/css/MainPageStyles.css"/>
 </head>
 <body>
-<div>
+<div class="flex">
     @if (_signInManager.IsSignedIn(User))
     {
         <div>
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">New survey</a>
+                    <button type="button" class="btn btn-dark">New survey</button>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">My surveys</a>
+                    <button type="button" class="btn btn-dark">My surveys</button>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Surveys templates</a>
+                    <button type="button" class="btn btn-dark">Surveys templates</button>
                 </li>
             </ul>
         </div>
