More beautiful buttons

--- a/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
 <div class="flex">
     @if (_signInManager.IsSignedIn(User))
     {
-        <div>
+        <div class="button-menu">
             <ul class="nav flex-column">
                 <li class="nav-item">
                     <button type="button" class="btn btn-dark">New survey</button>
