--- a/src/iTechArt.SurveysSite.WebApp/wwwroot/css/LoginAndRegistration.css
+++ b/src/iTechArt.SurveysSite.WebApp/wwwroot/css/LoginAndRegistration.css
@@ -4,6 +4,23 @@
     color: #fff;
 }
 
+#showPass {
+    margin-left: -6px;
+}
+
+#labelPass {
+    padding: 2px 7px 2px 17px;
+}
+
+label {
+    font-size: 16px;
+    margin: 0;
+}
+
+row {
+    padding-bottom: 5px;
+}
+
 .simple-login-container {
     width: 300px;
     max-width: 100%;
