New pages added with information about future updates

--- a/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
@@ -15,13 +15,13 @@
         <div class="button-menu">
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <button type="button" class="btn btn-dark">New survey</button>
+                    <a type="submit" class="btn btn-dark" asp-controller="Home" asp-action="NewSurvey">New survey</a>
                 </li>
                 <li class="nav-item">
-                    <button type="button" class="btn btn-dark">My surveys</button>
+                    <a type="submit" class="btn btn-dark" asp-controller="Home" asp-action="MySurveys">My surveys</a>
                 </li>
                 <li class="nav-item">
-                    <button type="button" class="btn btn-dark">Surveys templates</button>
+                    <a type="submit" class="btn btn-dark" asp-controller="Home" asp-action="SurveysTemplates">Surveys templates</a>
                 </li>
             </ul>
         </div>
