Button to move back to the main page and footer

--- a/src/iTechArt.SurveysSite.WebApp/Views/Home/NewSurvey.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Home/NewSurvey.cshtml
@@ -2,10 +2,11 @@
     <link rel="stylesheet" href="/css/PagesStyles.css" />
 </head>
 <div>
-    <partial name="_PagePartial" />
+    <partial name="_RobotImagePartial" />
     <div class="center">
         <p class="text-dark text-lg-center rounded border border-primary bg-warning">
             In the future you will be able to create a new survey here. Wait for the next version
         </p>
     </div>
+    <partial name="_ButtonToMainPagePartial" />
 </div>
