--- a/src/iTechArt.SurveysSite.WebApp/Views/Home/SurveysTemplates.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Home/SurveysTemplates.cshtml
@@ -2,10 +2,11 @@
     <link rel="stylesheet" href="/css/PagesStyles.css" />
 </head>
 <div>
-    <partial name="_PagePartial" />
+    <partial name="_RobotImagePartial" />
     <div class="center">
         <p class="text-dark text-lg-center rounded border border-primary bg-warning">
             You would be able to seen surveys templates here in the future
         </p>
     </div>
+    <partial name="_ButtonToMainPagePartial" />
 </div>
