--- a/src/iTechArt.SurveysSite.WebApp/Views/Shared/_Layout.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Shared/_Layout.cshtml
@@ -29,6 +29,11 @@
             @RenderBody()
         </main>
     </div>
+    <footer class="border-top footer text-muted">
+        <div class="container">
+            &copy; 2021 - Maxim Nevar, iTechArt Students Lab
+        </div>
+    </footer>
     <script src="/lib/jquery/jquery.min.js"></script>
     <script src="/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
