--- a/src/iTechArt.SurveysSite.WebApp/Views/Home/MySurveys.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Home/MySurveys.cshtml
@@ -2,10 +2,11 @@
     <link rel="stylesheet" href="/css/PagesStyles.css"/>
 </head>
 <div>
-    <partial name="_PagePartial"/>
+    <partial name="_RobotImagePartial"/>
     <div class="center">
         <p class="text-dark text-lg-center rounded border border-primary bg-warning">
             Your surveys would be located here. You have no surveys currently
         </p>
     </div>
+    <partial name="_ButtonToMainPagePartial"/>
 </div>
