Added page to display users visible only for admin

--- a/src/iTechArt.SurveysSite.WebApp/Views/SignIn/Login.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/SignIn/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model iTechArt.SurveysSite.WebApp.ViewModels.UserViewModel
+﻿@model iTechArt.SurveysSite.WebApp.ViewModels.LoginViewModel
 <head>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
