--- a/src/iTechArt.SurveysSite.WebApp/wwwroot/css/MainPageStyles.css
+++ b/src/iTechArt.SurveysSite.WebApp/wwwroot/css/MainPageStyles.css
@@ -3,3 +3,15 @@
     margin: 0 auto;
     width: 50%;
 }
+
+.button-menu {
+    margin-top: 34px;
+}
+
+.flex {
+    display: flex;
+}
+
+.nav-item .btn-dark {
+    margin-bottom: 20px;
+}
