--- a/src/iTechArt.SurveysSite.WebApp/Views/Shared/_Layout.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Shared/_Layout.cshtml
@@ -11,12 +11,15 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
+                <a asp-controller="Home" asp-action="Index">
+                    <img src="/images/iTechArt_logo.png" width="70" height="30"/>
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <partial name="_LoginPartial" />
+                    <partial name="_LoginPartial"/>
                 </div>
             </div>
         </nav>
@@ -26,6 +29,11 @@
             @RenderBody()
         </main>
     </div>
+    <footer class="border-top footer text-muted">
+        <div class="container">
+            &copy; 2021 - Maxim Nevar, iTechArt Students Lab
+        </div>
+    </footer>
     <script src="/lib/jquery/jquery.min.js"></script>
     <script src="/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
