--- a/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
                 @if (User.IsInRole(RoleNames.AdminRole))
                 {
                     <li class="nav-item">
-                        <a type="submit" class="btn btn-dark" asp-controller="AllUsers" asp-action="Index">Users</a>
+                        <a type="submit" class="btn btn-dark" asp-controller="Users" asp-action="DisplayAllUsers">Users</a>
                     </li>
                 }
             </ul>
