--- a/src/iTechArt.SurveysSite.WebApp/Views/Users/DisplayAllUsers.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Users/DisplayAllUsers.cshtml
@@ -35,9 +35,12 @@
     <td>
         @if (!user.RoleNames.Contains(RoleNames.AdminRole))
         {
-            <a asp-controller="UserManagement" asp-action="DeleteUser" asp-route-id="@user.Id" onclick="return confirm('Are you sure you want to delete user \'@user.Name\'?')">
-                <img src="/images/trashbin.png" class="trash-image">
-            </a>
+            <form method="post" asp-controller="Users" asp-action="DeleteUser" asp-route-id="@user.Id">
+                <button type="submit" onclick="return confirm('Are you sure you want to delete user \'@user.Name\'?')">
+                    <img src="/images/trashbin.png" class="trash-image">
+                </button>
+            </form>
+            
         }
     </td>
     </tr>
