Adding surveys and their creation

--- a/src/iTechArt.SurveysSite.WebApp/Views/Survey/NewSurvey.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Survey/NewSurvey.cshtml
@@ -10,41 +10,32 @@
             <input type="text" asp-for="Name" size="100"/>
         </div>
         <div class="row flex">
-            <button type="submit">Save</button>
+            <button type="submit" name="submit" value="save">Save</button>
+            <button type="submit" name="submit" value="cancel">Cancel</button>
         </div>
         <div class="row">
-            <label asp-for="Questions[0].Description" hidden></label>
-            <input type="text" class="no-border" asp-for="Questions[0].Description" readonly="readonly" value="Question with single choice" />
-            <label asp-for="Questions[0].QuestionType" hidden></label>
-            <input type="hidden" asp-for="Questions[0].QuestionType" value="@SurveyQuestionType.ClosedQuestion" />
+            <input type="text" class="no-border" readonly="readonly" value="Question with single choice"/>
             <ul>
                 <li>
-                    <label asp-for="Questions[0].Answers[0].Name" hidden></label>
                     <input type="radio" name="Single" value="Choice 1" disabled="disabled"/>
-                    <input type="text" class="no-border" asp-for="Questions[0].Answers[0].Name" value="Choice 1" readonly="readonly"/>
+                    <input type="text" class="no-border" value="Choice 1" readonly="readonly"/>
                 </li>
                 <li>
-                    <label asp-for="Questions[0].Answers[1].Name" hidden></label>
                     <input type="radio" name="Single" value="Choice 2" disabled="disabled"/>
-                    <input type="text" class="no-border" asp-for="Questions[0].Answers[1].Name" value="Choice 2" readonly="readonly" />
+                    <input type="text" class="no-border" value="Choice 2" readonly="readonly"/>
                 </li>
             </ul>
         </div>
         <div class="row">
-            <label asp-for="Questions[1].Description" hidden></label>
-            <input type="text" class="no-border" asp-for="Questions[1].Description" readonly="readonly" value="Question with multiple choice" />
-            <label asp-for="Questions[0].QuestionType" hidden></label>
-            <input type="hidden" asp-for="Questions[1].QuestionType" value="@SurveyQuestionType.OpenEndedQuestion" />
+            <input type="text" class="no-border" readonly="readonly" value="Question with multiple choice"/>
             <ul>
                 <li>
-                    <label asp-for="Questions[1].Answers[0].Name" hidden></label>
                     <input type="checkbox" value="Choice 1" disabled="disabled"/>
-                    <input type="text" class="no-border" asp-for="Questions[1].Answers[0].Name" value="Choice 1" readonly="readonly" />
+                    <input type="text" class="no-border" value="Choice 1" readonly="readonly"/>
                 </li>
                 <li>
-                    <label asp-for="Questions[1].Answers[1].Name" hidden></label>
-                    <input type="checkbox" value="Choice 2" disabled="disabled" />
-                    <input type="text" class="no-border" asp-for="Questions[1].Answers[1].Name" value="Choice 2" readonly="readonly" />
+                    <input type="checkbox" value="Choice 2" disabled="disabled"/>
+                    <input type="text" class="no-border" value="Choice 2" readonly="readonly"/>
                 </li>
             </ul>
         </div>
