Button to main page

--- a/src/iTechArt.SurveysSite.WebApp/Views/Users/DisplayAllUsers.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Users/DisplayAllUsers.cshtml
@@ -3,46 +3,48 @@
 <head>
     <link rel="stylesheet" href="/css/AllUsersPage.css"/>
 </head>
-<table class="table table-hover">
-    <thead>
-    <tr>
-        <th>
-            Username
-        </th>
-        <th>
-            Date of registration
-        </th>
-        <th>
-            Role
-        </th>
-        <th>
-            Actions
-        </th>
-    </tr>
-    </thead>
-    @foreach (var user in Model)
-    {
-<tr>
-    <td>
-        @Html.DisplayFor(modelItem => user.Name)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => user.DateOfRegistration)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => user.RoleNames)
-    </td>
-    <td>
-        @if (!user.RoleNames.Contains(RoleNames.AdminRole))
+<body>
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <th>
+                    Username
+                </th>
+                <th>
+                    Date of registration
+                </th>
+                <th>
+                    Role
+                </th>
+                <th>
+                    Actions
+                </th>
+            </tr>
+        </thead>
+        @foreach (var user in Model)
         {
-            <form method="post" asp-controller="Users" asp-action="DeleteUser" asp-route-id="@user.Id">
-                <button type="submit" onclick="return confirm('Are you sure you want to delete user \'@user.Name\'?')">
-                    <img src="/images/trashbin.png" class="trash-image">
-                </button>
-            </form>
-            
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => user.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => user.DateOfRegistration)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => user.RoleNames)
+                </td>
+                <td>
+                    @if (!user.RoleNames.Contains(RoleNames.AdminRole))
+                    {
+                        <form method="post" asp-controller="Users" asp-action="DeleteUser" asp-route-id="@user.Id">
+                            <button type="submit" onclick="return confirm('Are you sure you want to delete user \'@user.Name\'?')">
+                                <img src="/images/trashbin.png" class="trash-image">
+                            </button>
+                        </form>
+                    }
+                </td>
+            </tr>
         }
-    </td>
-    </tr>
-    }
     </table>
+    <a class="btn btn-light rounded btn-main" asp-controller="Home" asp-action="Index">Back to main page</a>
+</body>
