--- a/src/iTechArt.SurveysSite.WebApp/Views/Survey/NewSurvey.cshtml
+++ b/src/iTechArt.SurveysSite.WebApp/Views/Survey/NewSurvey.cshtml
@@ -7,40 +7,50 @@
     <form method="post" asp-action="NewSurvey">
         <div class="row">
             <label asp-for="Name"></label>
-            <input type="text" asp-for="Name" size="100"/>
+            <span><input class="input" type="text" asp-for="Name" /></span>
         </div>
         <div class="row flex">
-            <button type="submit" name="submit" value="save">Save</button>
-            <button type="submit" name="submit" value="cancel">Cancel</button>
+            <button class="btn btn-light" type="submit">Save</button>
+            <a class="btn btn-light" asp-controller="Home" asp-action="Index">Cancel</a>
         </div>
-        <div class="row">
-            <input type="text" class="no-border" readonly="readonly" value="Question with single choice"/>
-            <ul>
-                <li>
-                    <input type="radio" name="Single" value="Choice 1" disabled="disabled"/>
-                    <input type="text" class="no-border" value="Choice 1" readonly="readonly"/>
-                </li>
-                <li>
-                    <input type="radio" name="Single" value="Choice 2" disabled="disabled"/>
-                    <input type="text" class="no-border" value="Choice 2" readonly="readonly"/>
-                </li>
-            </ul>
-        </div>
-        <div class="row">
-            <input type="text" class="no-border" readonly="readonly" value="Question with multiple choice"/>
-            <ul>
-                <li>
-                    <input type="checkbox" value="Choice 1" disabled="disabled"/>
-                    <input type="text" class="no-border" value="Choice 1" readonly="readonly"/>
-                </li>
-                <li>
-                    <input type="checkbox" value="Choice 2" disabled="disabled"/>
-                    <input type="text" class="no-border" value="Choice 2" readonly="readonly"/>
-                </li>
-            </ul>
+        <div class="border border-dark">
+            <div class="row">
+                <input type="text" class="no-border" readonly="readonly" value="Question with single choice"/>
+                <ul>
+                    <li>
+                        <input type="radio" name="Single" value="Choice 1" disabled="disabled"/>
+                        <input type="text" class="no-border" value="Choice 1" readonly="readonly"/>
+                    </li>
+                    <li>
+                        <input type="radio" name="Single" value="Choice 2" disabled="disabled"/>
+                        <input type="text" class="no-border" value="Choice 2" readonly="readonly"/>
+                    </li>
+                </ul>
+            </div>
+            <div class="row">
+                <input type="text" class="no-border" readonly="readonly" value="Question with multiple choice"/>
+                <ul>
+                    <li>
+                        <input type="checkbox" value="Choice 1" disabled="disabled"/>
+                        <input type="text" class="no-border" value="Choice 1" readonly="readonly"/>
+                    </li>
+                    <li>
+                        <input type="checkbox" value="Choice 2" disabled="disabled"/>
+                        <input type="text" class="no-border" value="Choice 2" readonly="readonly"/>
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="row">
             @Html.ValidationSummary(false)
         </div>
     </form>
 </body>
+@if (!string.IsNullOrEmpty(ViewBag.Message))
+{
+    <script>
+        window.onload = function() {
+            alert("@ViewBag.Message");
+        };
+    </script>
+}
