--- a/src/iTechArt.SurveysSite.WebApp/wwwroot/css/NewSurveyStyles.css
+++ b/src/iTechArt.SurveysSite.WebApp/wwwroot/css/NewSurveyStyles.css
@@ -2,11 +2,22 @@
     list-style-type: none
 }
 
-.no-border {
-    border: 0;
+input {
+    margin-left: 15px;
 }
 
-input {
-    padding-left: 10px;
-    width: 20%
+.no-border {
+    border: 0;
+    width: 240px;
+}
+
+.btn-light {
+    width: 100px;
+    margin: 20px 15px 35px 11px;
+}
+
+.input {
+    width: 450px;
+    margin-left: 0;
+    margin-top: 7px;
 }
